--- a/templates/main.html
+++ b/templates/main.html
@@ -71,17 +71,16 @@
         <div class="intro">
             <h1 class=" highlight-border welcome">Peek-a-Boo! Bangalore</h1>
             
-            <p class="desc">Welcome to Sneak Peek, where we’ve got the hottest gossip on Bangalore’s coolest spots! Whether you're chasing the
-            latest foodie trends or hunting for hidden gems, we serve up a handpicked menu of the city's finest. From trendy cafes
-            to underground events, we dish out what’s happening in the heart of Bangalore. Our blog is your backstage pass, giving
-            you the 411 on everything young, fun, and fresh. Built by Bangalore’s youth, for Bangalore’s youth—because who knows the
-            pulse of the city better than us? Get ready to be Bangalored!
+            <p class="desc">Welcome to Sneak Peek, your ultimate source for the hottest gossip on Bangalore's coolest spots! Whether you're chasing
+            the latest foodie trends or hunting for hidden gems, we’ve got you covered. From trendy cafes to underground events, we
+            serve up the freshest scoop straight from the heart of the city. Built by Bangalore’s youth, for Bangalore’s
+            youth—because nobody knows the city’s vibe better than us! Subscribe to our newsletter for exclusive
+            updates and insider info that’ll keep you in the loop!
             </p>
             <ul class="links">
                 <a href="blogs"><li>Blogs</li></a>
                 <a href="about"><li>About</li></a>
                 <a href="latest"><li>Latest</li></a>
-                <a href="/ricochet_radio"><li>Ricochet Radio</li></a>
             </ul>
         </div>
 
@@ -116,7 +115,7 @@
                     <div class="card-text">Latest</div></a>
                 </div>
                 <div class="card">
-                    <a href="/ricochet_radio"><img src="/static/Images/Ricochet Radio.jpg" alt="Card 3">
+                    <a href="/ricochet_radio"><img src="/static/Images/Ricochet Radio (2).jpg" alt="Card 3">
                         <div class="card-text">Ricochet Radio</div>
                     </a>
                 </div>
